# efft

./: CITATION.cff  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  Doxyfile  README.md  annotated.html  annotated_dup.js  classRandEventGenerator-members.html  classRandEventGenerator.html  classStimuli-members.html  classStimuli.html  classStimuli.js  classStimulus-members.html  classStimulus.html  classeFFT-members.html  classeFFT.html  classeFFT.js  classes.html  dir_13a41d9ad64fb9ae396cb953294783cf.html  dir_3de04b1ee9ece5beafca72356c1bfe6a.html  dir_59425e443f801f1f2fd8bbe4959a3ccf.html  dir_7837fde3ab9c1fb2fc5be7b717af8d79.html  dir_7837fde3ab9c1fb2fc5be7b717af8d79.js  dir_c05b91a3ab194cb81c2582492351eeee.html  dir_c05b91a3ab194cb81c2582492351eeee.js  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23.js  dir_f5914bd29df15049ae416e8a0eac21ca.html  doxygen_crawl.html  efft_8hpp.html  efft_8hpp.js  efft_8hpp_source.html  files.html  files_dup.js  functions.html  functions_func.html  hierarchy.html  hierarchy.js  include_2efft_8hpp.html  (+12 more)
.github/: CODEOWNERS
.github/workflows/: build.yaml  cd.yaml  ci.yaml  docker.yaml  documentation.yaml  test.yaml
benchmarks/: efft_benchmark.cpp
examples/: efft-quickstar.ipynb
include/: efft.hpp
python/: .gitignore  CMakeLists.txt  README.md  pyproject.toml
python/include/: efft.hpp
python/src/efft/: __init__.py  bindings.cpp
python/tests/: test_efft.py
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_1b.js  all_1c.js  all_1d.js  all_1e.js  all_1f.js  all_2.js  all_20.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  files_0.js  functions_0.js  functions_1.js  (+4 more)
tests/: efft.cpp  efft_test.cpp
